--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
-    - run: node --experimental-vm-modules node_modules/jest/bin/jest.js
+    - run: node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage
 
     # - name: Code Coverage Report
     #   uses: irongut/CodeCoverageSummary@v1.3.0
