--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node --watch server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --no-cache"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --watchAll --no-cache"
   },
   "author": "@RapPayne, @OlaEkdahl, et. al.",
   "license": "ISC",
