--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
   
   docker:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -43,4 +44,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: olaekdahl/todos:latest
+          tags: olaekdahl/todos:${{ github.sha }}
