--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
+      - name: TruffleHog OSS
+        uses: trufflesecurity/trufflehog@v3.42.0
+        with:
+          # Repository path
+          path: ./
+          base: ${{ github.event.repository.default_branch }}
+          head: HEAD
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
